--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,33 @@
   --clr-Bg: hsl(0, 0%, 98%);
   --clr-Txt: hsl(200, 15%, 8%);
   --clr-Elems: hsl(0, 0%, 100%);
+  --clr-LMInp: hsl(0, 0%, 52%);
+  --clr-LoaderBg: hsl(0, 0%, 92%);
+  --clr-LoaderHL: hsl(0, 0%, 96%);
 }
 
 .dark-mode {
   --clr-Bg: hsl(207, 26%, 17%);
   --clr-Txt: hsl(0, 0%, 100%);
   --clr-Elems: hsl(209, 23%, 22%);
+  --clr-LMInp: hsl(0, 0%, 98%);
+  --clr-LoaderBg: hsl(210, 24%, 26%);
+  --clr-LoaderHL: hsl(208, 27%, 38%);
+}
+
+.loading_ {
+  color: var(--clr-Txt);
+}
+.loader {
+  background-color: var(--clr-LoaderBg);
+}
+.loader::after {
+  background-image: linear-gradient(
+    90deg,
+    var(--clr-LoaderBg),
+    var(--clr-LoaderHL),
+    var(--clr-LoaderBg)
+  );
 }
 
 .all-error {
